crates/bitnet-inference/tests/snapshots/snapshot_wave10__builder_config_with_stops_json.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
{
  "sampling": {
    "temperature": 0.9,
    "top_k": 100,
    "top_p": 0.95,
    "repetition_penalty": 1.1,
    "seed": 42
  },
  "generation": {
    "max_tokens": 256,
    "stop_sequences": [
      "</s>",
      "\n\nQ:"
    ],
    "stop_token_ids": [
      128009,
      128001
    ],
    "stream": false
  },
  "hardware": {
    "num_threads": 0,
    "memory_limit_mb": 0
  }
}
