crates/bitnet-inference/tests/snapshots/snapshot_wave10__builder_generation_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
GenerationConfig {
    max_tokens: 128,
    stop_sequences: [],
    stop_token_ids: [],
    stream: false,
}
