crates/bitnet-inference/tests/snapshots/snapshot_wave10__builder_preset_balanced_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
InferenceConfig {
    sampling: SamplingConfig {
        temperature: 0.7,
        top_k: 50,
        top_p: 0.9,
        repetition_penalty: 1.05,
        seed: None,
    },
    generation: GenerationConfig {
        max_tokens: 128,
        stop_sequences: [],
        stop_token_ids: [],
        stream: false,
    },
    hardware: HardwareConfig {
        num_threads: 0,
        memory_limit_mb: 0,
    },
}
