crates/bitnet-inference/tests/snapshots/snapshot_wave10__builder_preset_quality_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
InferenceConfig {
    sampling: SamplingConfig {
        temperature: 0.9,
        top_k: 100,
        top_p: 0.95,
        repetition_penalty: 1.1,
        seed: None,
    },
    generation: GenerationConfig {
        max_tokens: 256,
        stop_sequences: [],
        stop_token_ids: [],
        stream: false,
    },
    hardware: HardwareConfig {
        num_threads: 0,
        memory_limit_mb: 0,
    },
}
