crates/bitnet-inference/tests/snapshots/snapshot_wave10__builder_validate_max_tokens_zero_error.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: err
---
max_tokens must be > 0
