crates/bitnet-inference/tests/snapshots/snapshot_wave10__builder_validate_negative_temperature_error.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: err
---
temperature must be >= 0.0
