crates/bitnet-inference/tests/snapshots/snapshot_wave10__builder_validate_num_threads_too_large_error.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: err
---
num_threads must be <= 1024
